apps/webtop/Deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtop
  labels:
    app: webtop
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webtop
  template:
    metadata:
      labels:
        app: webtop
        name: webtop
    spec:
      nodeSelector:
        kubernetes.io/hostname: "rk1-3"
      containers:
      - name: webtop
        image: lscr.io/linuxserver/webtop:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
          runAsGroup: 0
          runAsUser: 0
        volumeMounts:
        - name: config
          mountPath: "/config"
        - name: dri
          mountPath: /dev/dri
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: dri
        hostPath:
          path: /dev/dri
