apps/webtop/Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webtop
spec:
  selector:
    app: webtop
  type: NodePort
  ports:
    - port: 3001
      targetPort: 3001
      name: webtop
