apps/webtop/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webtop2
  namespace: webtop
spec:
  entryPoints:
    - websecure
  routes:
      - kind: Rule
        match: "Host(`webtop.camsab.me`)"
        priority: 10
        services: 
          - name: webtop
            port: 3001
            namespace: webtop
  tls:
    secretName: webtop
